--- a/src/index.html
+++ b/src/index.html
@@ -16,40 +16,44 @@
         <a href="#!" class="header__logo">
           <img src="img/logo.svg" alt="Drile - sale of furniture" class="logo">
         </a>
-        <nav class="nav header__nav">
+        <nav id="nav" class="nav header__nav">
           <ul class="menu">
             <li class="menu__item">
-              <a href="" class="menu__link">Home</a>
+              <a href="#!" class="menu__link">Home</a>
             </li>
             <li class="menu__item">
-              <a href="" class="menu__link">Shop</a>
+              <a href="#!" class="menu__link">Shop</a>
             </li>
             <li class="menu__item">
-              <a href="" class="menu__link">Product</a>
+              <a href="#!" class="menu__link">Product</a>
             </li>
             <li class="menu__item">
-              <a href="" class="menu__link">Blog</a>
+              <a href="#!" class="menu__link">Blog</a>
             </li>
             <li class="menu__item">
-              <a href="" class="menu__link">Page</a>
+              <a href="#!" class="menu__link">Page</a>
             </li>
             <li class="menu__item">
-              <a href="" class="menu__link">Contact</a>
+              <a href="#!" class="menu__link">Contact</a>
             </li>
           </ul>
         </nav>
-        <nav class="nav header__nav">
+        <div class="nav header__nav">
           <ul class="user-menu">
             <li class="user-menu__item">
-              <button class="btn user-menu__btn">
-                <svg width="22" height="22" viewBox="0 0 22 22" xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="M8.32379 0C3.73732 0 0 3.73732 0 8.32379C0 12.9103 3.73732 16.6476 8.32379 16.6476C10.2969 16.6476 12.1068 15.9521 13.5355 14.7989L20.4754 21.7388C20.8235 22.087 21.3905 22.0872 21.7389 21.7388C22.087 21.3906 22.0872 20.8237 21.7389 20.4753L14.8085 13.545C15.9602 12.1167 16.6479 10.2956 16.6479 8.32395C16.6479 3.73748 12.9105 0.000159169 8.32406 0.000159169L8.32379 0ZM8.32379 1.78378C11.9462 1.78378 14.8639 4.7014 14.8639 8.3239C14.8639 11.9464 11.9463 14.864 8.32379 14.864C4.70135 14.864 1.78367 11.9464 1.78367 8.3239C1.78367 4.70124 4.7013 1.78378 8.32379 1.78378Z" />
-                </svg>
-              </button>
+              <!--  -->
+              <div class="user-menu__search">
+                <input type="search" class="user-menu__input hide">
+                <button id="search" class="user-menu__btn">
+                  <svg width="22" height="22" viewBox="0 0 22 22" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M8.32379 0C3.73732 0 0 3.73732 0 8.32379C0 12.9103 3.73732 16.6476 8.32379 16.6476C10.2969 16.6476 12.1068 15.9521 13.5355 14.7989L20.4754 21.7388C20.8235 22.087 21.3905 22.0872 21.7389 21.7388C22.087 21.3906 22.0872 20.8237 21.7389 20.4753L14.8085 13.545C15.9602 12.1167 16.6479 10.2956 16.6479 8.32395C16.6479 3.73748 12.9105 0.000159169 8.32406 0.000159169L8.32379 0ZM8.32379 1.78378C11.9462 1.78378 14.8639 4.7014 14.8639 8.3239C14.8639 11.9464 11.9463 14.864 8.32379 14.864C4.70135 14.864 1.78367 11.9464 1.78367 8.3239C1.78367 4.70124 4.7013 1.78378 8.32379 1.78378Z" />
+                  </svg>
+                </button>
+              </div>
             </li>
             <li class="user-menu__item">
-              <button class="btn user-menu__btn">
+              <button class="user-menu__btn">
                 <svg width="24" height="22" viewBox="0 0 24 22" xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M23.0343 4.06237C23.0285 4.03061 23.0257 3.99906 23.0142 3.97012C23.0028 3.92973 22.9855 3.89516 22.9624 3.85778C22.9479 3.83185 22.9306 3.80593 22.9105 3.78282C22.8846 3.75107 22.8559 3.72514 22.8241 3.69922C22.7982 3.67912 22.7723 3.66184 22.7435 3.64455C22.709 3.62446 22.6716 3.6128 22.6312 3.60134C22.6111 3.59552 22.5938 3.58125 22.5707 3.57823C22.5562 3.57542 22.542 3.58105 22.5247 3.58105C22.5074 3.58105 22.4959 3.57241 22.4787 3.57241L5.29557 3.57261L4.77404 0.466851C4.76821 0.440926 4.75394 0.417815 4.7453 0.394906C4.73666 0.366168 4.72802 0.337228 4.71355 0.311303C4.69345 0.273924 4.67034 0.239359 4.64441 0.207605C4.62432 0.184494 4.60703 0.164397 4.58392 0.144298C4.55217 0.11556 4.5176 0.0952622 4.48022 0.0751626C4.4543 0.0606928 4.42837 0.0492373 4.39963 0.0377824C4.35924 0.0233127 4.31905 0.0176861 4.27584 0.0118575C4.25574 0.00904399 4.23846 0.000402329 4.21816 0.000402329L0.564743 0C0.253643 0 0 0.253623 0 0.564744C0 0.875865 0.250608 1.12949 0.564743 1.12949H3.74268L5.83435 13.5871C4.91811 13.8118 4.26138 14.6214 4.26138 15.5865V15.6844C4.3074 16.7994 5.218 17.6724 6.33298 17.6724L20.3119 17.6551C20.623 17.6551 20.8766 17.4015 20.8738 17.0903C20.8738 16.7792 20.6202 16.5284 20.3091 16.5284L6.33015 16.5457C5.82029 16.5457 5.40527 16.1482 5.38521 15.6613V15.5893C5.38521 15.0996 5.7568 14.699 6.24655 14.653L10.499 14.2728C10.5135 14.2728 10.5278 14.2728 10.5422 14.27L21.087 13.3306C21.1071 13.3278 21.1244 13.3192 21.1447 13.3134C21.1879 13.3047 21.2311 13.2933 21.2685 13.276C21.2944 13.2645 21.3175 13.2501 21.3404 13.2328C21.375 13.2097 21.4037 13.1868 21.4327 13.1578C21.4528 13.1377 21.47 13.1174 21.4873 13.0915C21.5104 13.0597 21.5277 13.0252 21.545 12.9878C21.5565 12.9591 21.5681 12.9331 21.5767 12.9014C21.5796 12.8869 21.5882 12.8755 21.5912 12.8582L23.0376 4.23499C23.0404 4.22052 23.0348 4.20906 23.0376 4.19459C23.04 4.17168 23.0486 4.15721 23.0486 4.13711C23.0486 4.11119 23.0372 4.08808 23.0342 4.06215L23.0343 4.06237ZM5.75967 6.34418L5.48313 4.69903H8.36422L8.64075 6.34418H5.75967ZM5.94978 7.47064H8.83086L9.15925 9.42684H6.27816L5.94978 7.47064ZM6.9524 13.452L6.46546 10.5536H9.34654L9.79028 13.1983L6.9524 13.452ZM13.0891 12.9045L10.9168 13.0976L10.4904 10.5536H13.0891L13.0891 12.9045ZM13.0891 9.42715H10.3003L9.97189 7.47094H13.0893L13.0891 9.42715ZM13.0891 6.34429H9.78461L9.50807 4.70217H13.0893L13.0891 6.34429ZM16.4658 12.6019L14.2158 12.8037V10.5536H16.8086L16.4658 12.6019ZM16.9987 9.42699H14.2155V7.47079H17.3271L16.9987 9.42699ZM14.2157 6.34413V4.69898H17.7911L17.5146 6.34413H14.2157ZM20.5541 12.2385L17.624 12.498L17.9495 10.5532H20.8335L20.5541 12.2385ZM21.0266 9.42679H18.1397L18.4681 7.47058H21.352L21.0266 9.42679ZM21.5422 6.34393H18.6583L18.9349 4.69878H21.8188L21.5422 6.34393Z" />
@@ -61,7 +65,7 @@
               </button>
             </li>
             <li class="user-menu__item">
-              <button class="btn user-menu__btn">
+              <button class="user-menu__btn">
                 <svg width="23" height="22" viewBox="0 0 23 22" xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M21.6423 22C21.9451 22 22.1907 21.762 22.1907 21.4691C22.1907 17.0718 19.4208 13.1119 15.3423 11.5051C16.8254 10.3113 17.7716 8.51233 17.7716 6.50335C17.7716 2.91741 14.7579 0 11.0534 0C7.34925 0 4.33528 2.91755 4.33528 6.50335C4.33528 8.51304 5.28209 10.3124 6.76635 11.5065C2.79416 13.0857 0.190674 16.9656 0.190674 21.4691C0.190674 21.7622 0.43646 22 0.739047 22C1.04183 22 1.28742 21.762 1.28742 21.4691C1.28742 17.1397 3.93463 13.4542 7.8915 12.2398C8.83469 12.7287 9.91077 13.0071 11.0534 13.0071C12.1961 13.0071 13.2724 12.729 14.2154 12.2396C18.2735 13.4822 21.0937 17.2517 21.0937 21.469C21.0937 21.7624 21.3393 22 21.6423 22L21.6423 22ZM5.43202 6.50378C5.43202 3.50309 7.95378 1.0622 11.0533 1.0622C14.1532 1.0622 16.6747 3.50314 16.6747 6.50378C16.6747 9.50428 14.1531 11.9454 11.0533 11.9454C7.95374 11.9454 5.43202 9.50442 5.43202 6.50378Z" />
@@ -69,14 +73,49 @@
               </button>
             </li>
           </ul>
-        </nav>
+        </div>
       </div>
     </header>
+    <!-- End of header -->
     <main class="main">
-      main
+      <div class="hero">
+        <div class="container--fluid hero__container">
+          <div class="swiper hero__slider">
+            <div class="swiper-wrapper hero__slider-wrapper">
+              <div class="swiper-slide hero__slider-slide">
+                <div class="hero__slider-img">
+                  <img src="./img/hero/item-1.png" alt="furniture">
+                </div>
+                <div class="hero__slider-description">
+                  <h2 class="hero__slider-title">Get ready for Our
+                    stylist chair</h2>
+                  <a href="#!" class="btn hero__slider-btn">SHOP NOW</a>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-button-prev hero__slider-prev">
+              <svg width="27" height="53" viewBox="0 0 27 53" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M0.00819732 26.6316C0.0364472 26.9013 0.152723 27.153 0.338187 27.3466L24.9762 52.626C25.1936 52.86 25.4933 52.9948 25.8086 52.9999C26.1238 53.0049 26.4276 52.8793 26.6516 52.652C26.8755 52.4247 27.0012 52.1143 27 51.7912C26.9988 51.4677 26.8706 51.1585 26.6446 50.9329L2.83039 26.5L26.6446 2.0671L26.6446 2.06668C26.8706 1.8415 26.9988 1.53229 27 1.20881C27.0012 0.885323 26.8755 0.575287 26.6516 0.348004C26.4276 0.120301 26.1238 -0.00489013 25.8086 0.000145266C25.4933 0.00518448 25.1936 0.139626 24.9762 0.37405L0.337137 25.6534C0.0894364 25.9117 -0.0317458 26.2709 0.00714978 26.6314L0.00819732 26.6316Z"
+                  fill="#797979" />
+              </svg>
+            </div>
+            <div class="swiper-button-next hero__slider-next">
+              <svg width="27" height="53" viewBox="0 0 27 53" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M26.9918 26.3684C26.9636 26.0987 26.8473 25.847 26.6618 25.6534L2.02377 0.374049C1.80637 0.140044 1.50668 0.00518901 1.19142 0.000144965C0.876171 -0.00489628 0.572386 0.120717 0.348425 0.348C0.124474 0.575283 -0.00121883 0.885743 7.57656e-06 1.20881C0.00123589 1.53229 0.129387 1.8415 0.355381 2.0671L24.1696 26.5L0.355379 50.9329L0.355379 50.9333C0.129385 51.1585 0.0012318 51.4677 5.36553e-06 51.7912C-0.00122298 52.1147 0.124471 52.4247 0.348423 52.652C0.572374 52.8797 0.876169 53.0049 1.19142 52.9999C1.50667 52.9948 1.80637 52.8604 2.02377 52.6259L26.6629 27.3466C26.9106 27.0883 27.0317 26.7291 26.9928 26.3686L26.9918 26.3684Z"
+                  fill="#797979" />
+              </svg>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End of hero -->
     </main>
     <footer class="footer">footer</footer>
   </div>
+  <!-- Scripts -->
+  <script src="js/script.js"></script>
 </body>
 
 </html>
